--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="container">
-  <h3>Parent</h3>
-  <p>Number: {{ num }}</p>
-  <button (click)="increment()">Increment</button>
-  <app-child [(num)]="num"></app-child>
-</div>
+<app-parent></app-parent>
